--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,12 +18,16 @@
   font-size: 30px;
   font-family: sans-serif;
   position: absolute;
-  transition: .5s ease-in-out;
+  transition: .25s ease-in-out;
   background: #bada55 ;
-  border: 1px solid #000000 ;
 
   -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
 
+}
+
+.board,
+.shuffle-btn {
+  display: inline-block;
 }
