--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,30 +1,29 @@
 .board {
-  width: 300px;
+/*  width: 300px;
   height: 300px;
-  /*
-  border: 1px solid red;
-  */
+  border: 1px solid red;*/
   position: relative;
 }
 
 .tile {
   /* display: inline-block; */
-  width: 100px;
-  height: 100px;
-  border: 1px solid black;
-  box-sizing: border-box;
   text-align: center;
-  line-height: 100px;
-  font-size: 30px;
+  line-height: 150%;
+  font-size: 100%;
   font-family: sans-serif;
   position: absolute;
   transition: .25s ease-in-out;
-  background: #bada55 ;
+  background: url('http://i163.photobucket.com/albums/t291/moonleerecords/covers/400px/hmrl015-hesus-attor-300.jpg');
 
   -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
   box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
 
+}
+
+.tile span {
+  line-height: 450%;
+  font-size: 1rem;
 }
 
 .board,
